[gd_scene load_steps=5 format=3 uid="uid://dnn55vshsj8x8"]

[ext_resource type="Script" uid="uid://vwnxdo7u01th" path="res://scenes/weapons/halberd.gd" id="1_gptxu"]
[ext_resource type="AudioStream" uid="uid://ugrqefjm33xl" path="res://sounds/melee_swipe.mp3" id="2_kskfe"]
[ext_resource type="AudioStream" uid="uid://dt2j3xre4ensk" path="res://sounds/charged_slash_sound.wav" id="3_tag8u"]
[ext_resource type="AudioStream" uid="uid://b25vxh4wh4rca" path="res://sounds/charged_sound.wav" id="4_0xxjg"]

[node name="Halberd" type="Node2D"]
script = ExtResource("1_gptxu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SwipeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kskfe")
volume_db = 5.0
bus = &"Sounds"

[node name="ChargedSwipeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tag8u")
volume_db = -7.0
bus = &"Sounds"

[node name="ChargedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0xxjg")
volume_db = 6.0
bus = &"Sounds"

[node name="ChargeAttack" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
